Fix issues found by FindBugs
git-svn-id: https://depfind.svn.sourceforge.net/svnroot/depfind/trunk@1546 1c2012b4-aa10-0410-bfa9-9e87fac9e5c7